able to implement passport.js

--- a/views/addFriend.handlebars
+++ b/views/addFriend.handlebars
@@ -80,18 +80,24 @@
                                     <div class="md-form">
                                         <i class="fas fa-user prefix grey-text"></i>
                                         <input placeholder="Name" type="text" id="name" name="name" class="form-control">
-                                    </div>
                                     {{!-- Label  End --}}
                                     <div class="md-form">
-                                        <i class="fas fa-user prefix grey-text"></i>
-                                        <select id="emoji" class="form-control" name="emoji">
-                                            <option value="significantOther">Significant Other</option>
-                                            <option value="friend">Friend</option>
-                                            <option value="family">Family</option>
-                                            <option value="colleague">Colleague</option>
-                                        </select>
+                                        
+                                        <div class="select">
+                                            <select 
+                                            class="form-control" id="emoji" type="button" name="emoji">
+
+                                                    <option value="newFriend">New Friend</option>
+                                                    <option value="significantOther">Significant Other</option>
+                                                    <option value="homie">Friend</option>
+                                                    <option value="family">Family</option>
+                                                    <option value="colleague">Colleague</option>
+                                                    <option value="bestFriend">Best Friend</option>
+                                            </select>
+                                        </div>
                                     </div>
 
+                                    </div>
                                     {{!-- Start Dropdown --}}
                                     <div class="md-form">
                                     </div>
