--- a/views/question/categories.handlebars
+++ b/views/question/categories.handlebars
@@ -1,4 +1,4 @@
-<nav class="navbar sticky-top navbar-light blue lighten-4">
+<nav class="navbar sticky-top navbar-light lighten-4">
 
     <a href="/home/{{user_id}}">
         <button type="button" class="navbar-brand white btn btn-outline-dark waves-effect">Play with another friend
