--- a/views/question/question.handlebars
+++ b/views/question/question.handlebars
@@ -1,5 +1,4 @@
-<nav class="navbar sticky-top navbar-light blue lighten-4">
-
+<nav class="navbar sticky-top navbar-light lighten-4">
     <a href="/categories/{{user_id}}/{{friend_id}}">
         <button type="button" class="navbar-brand white btn btn-outline-dark waves-effect">Pick another category
         </button>
