--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -14,8 +14,6 @@
     {{#each user_friend}}
     <div class="card">
         <div class="card-body">
-            {{this.answered_questions}}
-            {{this.total_questions}}
                 <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
                     <div class="my-3 py-3">
                         <h2 class="display-5">
@@ -27,7 +25,8 @@
                     {{!-- Questions Answered --}}
             
                 <div class="row justify-content-center">
-                    Answered Questions: {{this.allAnsweredQuestions}}
+                    Answered Questions: 
+            {{this.answered_questions}} / 187
                 </div>
 
                 {{!-- Questions Answered --}}
