able to favorite question and mark as done

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -46,6 +46,12 @@
                     <button type="button" class="btn btn-outline-dark waves-effect">Play
                     </button>
                 </a>
+
+                {{!-- Can't quite delete the friend - violates the foreign key constraint for user_friend_all_questions--}}
+                  {{!-- <a href="/deletefriend/{{this.user_id}}/{{this.id}}">
+                    {{!-- <button type="button" class="btn btn-outline-dark waves-effect">Delete Friend
+                    </button>
+                </a> --}} 
                 </div>
                 {{!-- End of Button Row --}}
 
