--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,16 +1,45 @@
-    <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
-        <div class="col-md-5 p-lg-5 mx-auto my-5">
-            <h1 class="display-4 font-weight-normal">the coolest people I know</h1>
+    {{!-- Block --}}
+    <div class="container my-5 py-5 z-depth-1">
 
-            <a href="/addfriend/{{user_id}}">
+
+  <!--Section: Content-->
+  <section class="dark-grey-text text-center">
+    
+    <h3 class="font-weight-bold pt-5 pb-2">the coolest people I know</h3>
+
+    <div class="row mx-3">
+      <div class="col-md-4 px-4 mb-4">
+
+        <div class="view">
+          <img src="https://mdbootstrap.com/img/illustrations/drawkit-drawing-man-colour.svg" class="img-fluid" alt="smaple image">
+        </div>
+
+      </div>
+     <div class="col-md-4 px-4 mb-4">
+
+        <div class="view">
+          <img src="https://mdbootstrap.com/img/illustrations/drawkit-phone-conversation-colour.svg" class="img-fluid" alt="sample image">
+        </div>
+
+      </div>
+      <div class="col-md-4 px-4 mb-4">
+
+        <div class="view">
+          <img src="https://mdbootstrap.com/img/illustrations/app-user-colour.svg" class="img-fluid" alt="smaple image">
+        </div>
+
+      </div>
+    </div>   <a href="/addfriend/{{user_id}}">
                 <button type="button" class="btn btn-outline-dark waves-effect">Add Friend
                 </button>
             </a>
-        </div>
-        <div class="product-device box-shadow d-none d-md-block"></div>
-        <div class="product-device product-device-2 box-shadow d-none d-md-block"></div>
-    </div>
-    <h1>
+
+  </section>
+  <!--Section: Content-->
+
+
+</div>
+    {{!-- End Block --}}
     {{#each user_friend}}
     <div class="card">
         <div class="card-body">
