--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -25,10 +25,10 @@
             <h1 class="mb-4">do <span class="text-warning">you</span><br><span class="cyan-text">remember</span>?</h1>
             <p class="mb-4 pb-2 dark-grey-text">an application to have better conversations</p>
             <a href="signup">
-          	<button type="button" class="btn btn-primary btn-rounded btn-md ml-md-0">Sign Up</button>
+          	<button type="button" class="btn btn-primary btn-rounded  btn-cyan btn-md ml-md-0">Sign Up</button>
               </a>
                <a href="login">
-          	<button type="button" class="btn btn-outline-grey btn-rounded btn-md">Login</button>
+          	<button type="button" class="btn btn-outline-warning btn-rounded btn-md">Login</button>
               </a>
 
           </div>
