--- a/views/addFriend.handlebars
+++ b/views/addFriend.handlebars
@@ -80,12 +80,11 @@
                                     <div class="md-form">
                                         <i class="fas fa-user prefix grey-text"></i>
                                         <input placeholder="Name" type="text" id="name" name="name" class="form-control">
-                                    {{!-- Label  End --}}
-                                    <div class="md-form">
-                                        
-                                        <div class="select">
-                                            <select 
-                                            class="form-control" id="emoji" type="button" name="emoji">
+                                        {{!-- Label  End --}}
+                                        <div class="md-form">
+
+                                            <div class="select">
+                                                <select class="form-control" id="emoji" type="button" name="emoji">
 
                                                     <option value="newFriend">New Friend</option>
                                                     <option value="significantOther">Significant Other</option>
@@ -93,9 +92,9 @@
                                                     <option value="family">Family</option>
                                                     <option value="colleague">Colleague</option>
                                                     <option value="bestFriend">Best Friend</option>
-                                            </select>
+                                                </select>
+                                            </div>
                                         </div>
-                                    </div>
 
                                     </div>
                                     {{!-- Start Dropdown --}}
