--- a/views/account/login.handlebars
+++ b/views/account/login.handlebars
@@ -1,67 +1,70 @@
 <div class="container my-5 py-5 z-depth-1">
 
 
-  <!--Section: Content-->
-  <section class="px-md-5 mx-md-5 text-center text-lg-left dark-grey-text">
+    <!--Section: Content-->
+    <section class="px-md-5 mx-md-5 text-center text-lg-left dark-grey-text">
 
-    <style>
-      .map-container {
-        height: 200px;
-        position: relative;
-      }
+        <style>
+            .map-container {
+                height: 200px;
+                position: relative;
+            }
 
-      .map-container iframe {
-        left: 0;
-        top: 0;
-        height: 100%;
-        width: 100%;
-        position: absolute;
-      }
-    </style>
+            .map-container iframe {
+                left: 0;
+                top: 0;
+                height: 100%;
+                width: 100%;
+                position: absolute;
+            }
+        </style>
 
-    <!--Grid row-->
-    <div class="row d-flex justify-content-center">
+        <!--Grid row-->
+        <div class="row d-flex justify-content-center">
 
-      <!--Grid column-->
+            <!--Grid column-->
 
-      <div class="col-md-6 text-center">
+            <div class="col-md-6 text-center">
 
-        <h3 class="font-weight-bold">Login</h3>
+                <h3 class="font-weight-bold">Login</h3>
 
-{{!-- beginning of form  --}}
-        <form action="/login" method="POST">
+                {{!-- beginning of form  --}}
+                <form action="/login" method="POST">
 
-<a href="/auth/spotify">
-<button type="button" class="btn btn-fb"><i class="fab fa-facebook-f pr-1"></i> Spotify</button>
-</a>
-        <!-- Material outline input -->
+                    <a href="/auth/spotify">
+                        <button type="button" class="btn btn-outline-success waves-effect "><svg width="24" height="24" fill-rule="evenodd" clip-rule="evenodd">
+                                <path d="M19.098 10.638c-3.868-2.297-10.248-2.508-13.941-1.387-.593.18-1.22-.155-1.399-.748-.18-.593.154-1.22.748-1.4 4.239-1.287 11.285-1.038 15.738 1.605.533.317.708 1.005.392 1.538-.316.533-1.005.709-1.538.392zm-.126 3.403c-.272.44-.847.578-1.287.308-3.225-1.982-8.142-2.557-11.958-1.399-.494.15-1.017-.129-1.167-.623-.149-.495.13-1.016.624-1.167 4.358-1.322 9.776-.682 13.48 1.595.44.27.578.847.308 1.286zm-1.469 3.267c-.215.354-.676.465-1.028.249-2.818-1.722-6.365-2.111-10.542-1.157-.402.092-.803-.16-.895-.562-.092-.403.159-.804.562-.896 4.571-1.045 8.492-.595 11.655 1.338.353.215.464.676.248 1.028zm-5.503-17.308c-6.627 0-12 5.373-12 12 0 6.628 5.373 12 12 12 6.628 0 12-5.372 12-12 0-6.627-5.372-12-12-12z" /></svg> Spotify</button>
+                    </a>
 
-          <div class="md-form md-outline mt-3">
-          <input type="text" id="email" placeholder="email" name="email" class="form-control">
+
+                    <!-- Material outline input -->
+
+                    <div class="md-form md-outline mt-3">
+                        <input type="text" id="email" placeholder="email" name="email" class="form-control">
+                    </div>
+
+                    <!-- Material outline input -->
+                    <div class="md-form md-outline">
+                        <input type="text" id="password" placeholder="password" name="password" class="form-control">
+                    </div>
+
+                    <button type="submit" class="btn btn-info btn-sm ml-0">Login<i class="far fa-paper-plane ml-2"></i></button><br />
+                    <a href="/signup">
+                        <button type="submit" class="btn btn-info btn-sm ml-0">Signup<i class="far fa-paper-plane ml-2"></i></button>
+                    </a>
+
+                    <br />
+
+                    <button type="submit" class="btn btn-info btn-sm ml-0">Forgot Password<i class="far fa-paper-plane ml-2"></i></button>
+
+                </form>
+                {{!-- End of form --}}
+            </div>
+            <!--Grid column-->
         </div>
-
-        <!-- Material outline input -->
-        <div class="md-form md-outline">
-          <input type="text" id="password" placeholder="password" name="password" class="form-control">
-        </div>
-
-        <button type="submit" class="btn btn-info btn-sm ml-0">Login<i class="far fa-paper-plane ml-2"></i></button><br />
-        <a href="/signup">
-        <button type="submit" class="btn btn-info btn-sm ml-0">Signup<i class="far fa-paper-plane ml-2"></i></button>
-        </a>
-
-      <br />
-        
-        <button type="submit" class="btn btn-info btn-sm ml-0">Forgot Password<i class="far fa-paper-plane ml-2"></i></button>
-
-        </form>
-        {{!-- End of form --}}
-      </div>
-      <!--Grid column-->
-    </div>
-    <!--Grid row-->
-  </section>
-  <!--Section: Content-->
+        <!--Grid row-->
+    </section>
+    <!--Section: Content-->
 
 
 </div>
