--- a/views/question/question.handlebars
+++ b/views/question/question.handlebars
@@ -75,7 +75,7 @@
                     <input type="hidden" value={{this.friend_id}} name="friend_id" id="questionform_friend_id" />
                     <input type="hidden" value={{this.user_id}} name="questionform_user_id" id="questionform_user_id" />
                     <input type="hidden" value={{this.id}} name="questionform_question_id" id="questionform_question_id" />
-                    <button type="submit" name="favorite" value={{this.id}} class="btn btn-outline-dark waves-effect favoriteQuestionForm">Favorite
+                    <button type="submit" name="favorite" value={{this.id}} class="ripples btn btn-outline-dark waves-effect favoriteQuestionForm">Favorite
                     </button>
                 </form>
             </div>
