--- a/views/question/question.handlebars
+++ b/views/question/question.handlebars
@@ -12,28 +12,36 @@
 
     <!--Section: Content-->
     <section class="dark-grey-text text-center">
-
         <h3 class="font-weight-bold pt-4 mb-4">How to Play</h3>
 
         <h5 class="font-weight-bold font-italic mb-5">Description here about purpose of game</h5>
 
         <div class="row mx-lg-5 mx-md-3">
-            <div class="col-md-6 mb-4">
+             <div class="col-md-4 mb-4">
+
+                <div class="view mb-5">
+                   <iframe src="https://open.spotify.com/embed/playlist/1uv6vTxRZnksTy04AX6TRx" width="150" height="200" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
+
+                <h5 class="font-weight-normal text-muted">1. Play music</h5>
+
+            </div>
+            <div class="col-md-4 mb-4">
 
                 <div class="view mb-5">
                     <img src="https://mdbootstrap.com/img/illustrations/undraw_grand_slam_0q5r.svg" class="img-fluid" alt="smaple image">
                 </div>
 
-                <h5 class="font-weight-normal text-muted">Quote here .</h5>
+                <h5 class="font-weight-normal text-muted">2. Answer with real honesty</h5>
 
             </div>
-            <div class="col-md-6 mb-4">
+            <div class="col-md-4 mb-4">
 
                 <div class="view mb-5">
                     <img src="https://mdbootstrap.com/img/illustrations/undraw_basketball_agx4.png" class="img-fluid" alt="smaple image">
                 </div>
 
-                <h5 class="font-weight-normal text-muted">Second quote here.</h5>
+                <h5 class="font-weight-normal text-muted">3. Listen well - don't moralize, egg on, stay positive, and ask </h5>
 
             </div>
         </div>
