changed question file

--- a/views/account/signup.handlebars
+++ b/views/account/signup.handlebars
@@ -70,9 +70,7 @@
                     <form class="text-center border border-light p-5" action="/signup" method="POST">
 
                         <p class="h4 mb-4">let's get started</p>
-                        <button type="button" class="btn btn-fb"><i class="fab fa-facebook-f pr-1"></i> Spotify</button>
-                        <br />
-                        <br />
+                        {{!-- <button type="button" class="btn btn-fb"><i class="fab fa-facebook-f pr-1"></i> Spotify</button> --}}
                         <!-- Name -->
                         <input type="text" id="email" name="email" class="form-control mb-4" placeholder="Email">
 
