--- a/views/question/categories.handlebars
+++ b/views/question/categories.handlebars
@@ -26,7 +26,8 @@
                 <h5 class="font-weight-normal border-top border-light pt-4 mb-4"><a class="dark-grey-text" href="#">
                         Friendship</a>
                 </h5>
-                <i class="fa fa-map-marker-alt fa-3x indigo-text mb-4"></i><br />
+
+                <i class="fas fa-3x fa-bolt light-blue-text"></i><br /><br />
                 <a class="dark-grey-text" href="/play/friends/{{user_id}}/{{friend_id}}">
                     <button type="button" class="btn btn-outline-dark waves-effect">
                         converse
@@ -39,8 +40,9 @@
 
             {{!-- Beginning of Work --}}
             <div class="text-center col-md-6 col-lg-5 col-xl-4">
-                <h5 class="font-weight-normal border-top border-secondary pt-4 mb-4"><a class="dark-grey-text" href="#">Work</a></h5>
-                <i class="far fa-map fa-3x pink-text mb-4"></i><br />
+                <h5 class="font-weight-normal border-top border-secondary pt-4 mb-4"><a class="dark-grey-text">Work</a></h5>
+                <i class="fas fa-book fa-3x teal-text pr-2"></i><br />
+                <br />
                 <a class="dark-grey-text" href="/play/work/{{user_id}}/{{friend_id}}">
                     <button type="button" class="btn btn-outline-dark waves-effect">
                         converse
@@ -55,7 +57,7 @@
             <div class="w-100"></div><br />
             <div class="text-center col-md-6 col-lg-5 col-xl-4">
                 <h5 class="font-weight-normal border-top border-light pt-4 mb-4"><a class="dark-grey-text" href="#">Family</a></h5>
-                <i class="fa fa-globe-africa fa-3x amber-text mb-4"></i><br />
+                <i class="fas fa-3x fa-home deep-orange-text pr-2"></i><br /><br />
                 <a class="dark-grey-text" href="/play/family/{{user_id}}/{{friend_id}}">
                     <button type="button" class="btn btn-outline-dark waves-effect">
                         converse
@@ -69,7 +71,10 @@
             {{!-- Beginning of Love --}}
             <div class="text-center col-md-6 col-lg-5 col-xl-4">
                 <h5 class="font-weight-normal border-top border-light pt-4 mb-4">Love</h5>
-                <i class="fa fa-street-view fa-3x green-text mb-4"></i><br />
+
+
+                <i class="far fa-3x fa-heart deep-purple-text"></i>
+                <br /><br />
                 <a class="dark-grey-text" href="/play/love/{{user_id}}/{{friend_id}}">
                     <button type="button" class="btn btn-outline-dark waves-effect">
                         converse
@@ -81,7 +86,8 @@
             {{!-- Beginning of Favorite --}}
             <div class="text-center col-md-6 col-lg-5 col-xl-4">
                 <h5 class="font-weight-normal border-top border-light pt-4 mb-4">All my favorite questions</h5>
-                <i class="fa fa-street-view fa-3x green-text mb-4"></i><br />
+                <i class="fas fa-rocket fa-3x red-text pr-2"></i><br />
+                <br />
                 <a class="dark-grey-text" href="/favorites/{{user_id}}/{{friend_id}}">
                     <button type="button" class="btn btn-outline-dark waves-effect">
                         converse
