--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -104,11 +104,12 @@
                 }
             }
         </style>
-
-        <h3 class="font-weight-bold text-center dark-grey-text pb-2">About</h3>
+        <div class="container">
+        <h3 class="font-weight-bold text-center dark-grey-text pb-2">Do You Remember</h3>
         <hr class="w-header my-4">
-        <p class="lead text-center text-muted pt-2 mb-5">Do You Remember
+        <p class="lead text-center text-muted pt-2 mb-5">The purpose of this application is to increase understanding of ourselves - 
         </p>
+        </div>
 
 </div>
 <div class="row">
