--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -20,8 +20,8 @@
                 <div class="row align-items-center h-100">
                     <!--Grid column-->
                     <div class="col-md-6">
-                        <h1 class="mb-4">do <span class="text-warning">you</span><br><span class="cyan-text">remember</span>?</h1>
-                        <p class="mb-4 pb-2 dark-grey-text">an application to have better conversations</p>
+                        <h1 class="mb-4">let's talk:<br/> <span class="text-warning">hygge</span> <span class="cyan-text">chats</span></h1>
+                        <p class="mb-4 pb-2 dark-grey-text">an application to foster deeper connections through better conversations</p>
                         <a href="signup">
                             <button type="button" class="btn btn-primary btn-rounded  btn-cyan btn-md ml-md-0">Sign Up</button>
                         </a>
