fixed error - the friend_id and user_id was mixed

--- a/views/question/question.handlebars
+++ b/views/question/question.handlebars
@@ -65,6 +65,11 @@
 
           <p>{{this.question_string}}</p>
 
+        Question Id: {{this.id}}
+          Friend Id: {{this.friend_id}}
+          User Id: {{this.user_id}}
+
+
     <!--Section: Content-->
 <div class="row">
 
